--- a/components-src/stylus/components/util.styl
+++ b/components-src/stylus/components/util.styl
@@ -50,6 +50,7 @@ hide-input()
   margin 0
   -webkit-appearance none
   appearance none
+  pointer-events none
 
 hide-input-parent()
   position relative
